models/tests/ucl/errors/syntactic/badlhs.ucl
// UCLID TEST
// Solver=cvc4
// Result=None

module main {
  var a, b : integer;

  init {
    a + b = 0; // here
    b = 1;
  }

  next {
    a' = b;
    b' = a + b;
  }

  invariant a_le_b: a <= b;

    control
    {
        induction;
        check;
    }
}